# fairseq2

./: .areone.swp  .clang-format  .clang-tidy  .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  1  ASan.supp  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HG_ADAPTER_README.md  INSTALL_FROM_SOURCE.md  LSan.supp  Makefile  README.md  VERSION  bibliography.bib  check_gemma_models.sh  debug.py  discover_gemma3n_config.sh  finetune_llama4.sbatch  index.html  pyproject.toml  requirements-build.txt  requirements-conda.txt  requirements-devel.txt  requirements.txt  run_finetuning.py  run_pretraining.py  run_tests.py  setup.cfg  setup.py  setup.py.in  simple.py  test.py  (+6 more)
fairseq2n/: CMakeLists.txt  LSan.supp  README.md
fairseq2n/cmake/: base.cmake  summary.cmake
fairseq2n/cmake/modules/: FindTBB.cmake  FindTorch.cmake
fairseq2n/python/: requirements-build.txt  setup.py
fairseq2n/src/fairseq2n/: CMakeLists.txt  config.h.in  exception.h  float.h  memory.h  span.h
fairseq2n/tests/: test_float.cc  test_memory.cc  test_span.cc
fairseq2n/tests/utils/: test_cast.cc
native/src/fairseq2n/: CMakeLists.txt  config.h.in  exception.cc  float.h  fmt.h  memory.cc  span.h
native/tests/: CMakeLists.txt
native/tests/data/: test_immutable_string.cc  test_tape.cc
src/fairseq2/: CMakeLists.txt  __init__.py  checkpoint.py  cluster.py  collective.py  composition.py  config.cc  config.py  config.pyi  config_registry.py  console.py  context.py  data_type.py  dependency.py  device.py  distributed.py  early_stopper.py  error.py  evaluator.py  extensions.py  factory_registry.py  file_system.py  gang.py  gang_tmp.py  generator.py  hub.py  inference.py  io.py  logging.py  memory.py  metrics.py  model.py  registry.py  sequence_generator.py  services.py  setup.py  sharder.py  task.py  tasks.py  tbb.py  (+7 more)
src/fairseq2/_C/: __init__.pyi
src/fairseq2/assets/: __init__.py  __main__.py  _card.py  _dirs.py  _download_manager.py  _metadata_provider.py  _store.py  card.py  card_storage.py  cli.py  dirs.py  download_manager.py  downloader.py  error.py  metadata_provider.py  register.py  setup.py  store.py  utils.py
src/fairseq2/callbacks/: __init__.py  checkpoint.py  debugger.py  loggers.py  metrics.py
src/fairseq2/chatbots/: __init__.py  _chatbot.py  _handler.py  _static.py  chatbot.py  error.py  handler.py  llama.py  mistral.py  register.py  registry.py  setup.py  static.py
src/fairseq2/checkpoint/: __init__.py  _hg.py  _manager.py  _metadata_provider.py  hg.py  manager.py  metadata_provider.py  model_metadata.py
src/fairseq2/cli/: __init__.py  __main__.py  _cli.py  _logging.py  _main.py  _setup.py  api.py  cli.py  commands.py  defaults.py  distributed.py  logging.py  main.py  module_loader.py  setup.py  yaml_ext.py
src/fairseq2/composition/: __init__.py  assets.py  datasets.py  extensions.py  lib.py  models.py  tokenizers.py  wire.py
src/fairseq2/data/: __init__.py  _data_pipeline.py  _memory.py  audio.py  cstring.py  data_pipeline.py  data_source.cc  data_source.pyi  huggingface.py  image.py  interop.cc  interop.h  interop.pyi  memory.py  parquet_tools.py  png.py  processor.py  processors.py  string.py  tape.py  typing.py  utils.py  variant.py  video.py  vocabulary_info.py
src/fairseq2/dataloader/: __init__.py  huggingface.py  legacy.py  utils.py
src/fairseq2/datasets/: __init__.py  _batch.py  _config.py  _data_reader.py  _error.py  _handler.py  _hub.py  _utils.py  asr.py  asr_dataset.py  asr_parquet.py  batch.py  batching.py  config.py  data_reader.py  dataset_loader.py  error.py  family.py  handler.py  hub.py  huggingface.py  instruction.py  jsonl.py  loader.py  mmlu.py  multilingual_text_dataset.py  nllb.py  parallel_text.py  parallel_text_dataset.py  preference.py  prompt.py  setup.py  sonarspeech.py  speech.py  speech_parquet.py  speech_text.py  static.py  text.py  text_parquet.py  utils.py  (+1 more)
src/fairseq2/debug/: simple_trace.py
src/fairseq2/evals/: lm_eval_harness.py
src/fairseq2/extension/: CMakeLists.txt  module.cc  pybind11.h
src/fairseq2/generate/: __init__.py  generate.py  hf_tokenizer.py  search.py  spm_train.py  tokenizer.py
src/fairseq2/generation/: __init__.py  _error.py  _generator.py  _handler.py  _static.py  beam_search.py  beam_search_algorithm.py  chat.py  chatbot.py  decoder.py  encoder_decoder.py  factory.py  generator.py  handler.py  logits_processor.py  sampler.py  sampling.py  sequence_generator.py  static.py  step_processor.py  text.py  utils.py
src/fairseq2/metrics/: __init__.py  _aggregation.py  _bag.py  _descriptor.py  _setup.py  accuracy.py  aggregation.py  bag.py  bleu.py  common.py  formatters.py  hf.py  metric_bag.py  metric_recorder.py  recorder.py  wer.py  wer_metric.py
src/fairseq2/model/: ac.py  checkpoint.py  context.py  data_parallel.py  sharder.py
src/fairseq2/model_checkpoint/: __init__.py  basic.py  common.py  delegating.py  (+5 more)
tests/: CMakeLists.txt  __init__.py  __main__.py  common.py  conftest.py  requirements.txt  rng.py  run_tests  tensor_matchers.py  test_cli.py  test_tensor_matchers.py  testlib.py  utils.py
tests/assets/: test_card.py
tests/callbacks/: test_metrics.py
tests/cli/: simple_task.py  test_cli.py  test_examples.py  test_yaml_ext.py
tests/data/: test_dataloader.py  test_dataloader_sharding.py  test_interop.py  test_memory.py  test_round_robin.py  test_string.py  test_zip_dataloader.py
tests/generate/: search_test.py  test_generate.py  test_search.py  test_tokenizer.py
tests/integration/: test_fairseq1_checkpoint.py  test_hf.py
tests/modules/: test_module_list.py  test_positional_embedding.py
tests/native/: CMakeLists.txt  test_float.cc  test_memory.cc  test_span.cc
tests/nn/: test_module_list.py  test_position_encoder.py  test_positional_embedding.py  test_positional_encoder.py
tests/optim/: test_adamw.py  test_lr_scheduler.py
tests/parity/: test_qwen35_hf_parity.py
tests/unit/: helper.py  test_config_registry.py  test_data_type.py  test_dependency.py  test_file_system.py  test_gang.py  test_memory.py  test_metrics.py  test_sequence_generator.py
(+4433 files in other folders)
