[build-system]
requires = ["packaging~=23.1", "setuptools~=67.8", "wheel~=0.40"]
build-backend = "setuptools.build_meta"

[tool.black]
extend-exclude = "third-party"

[tool.flake8]
extend_exclude = ["third-party"]
extend_ignore = ["E", "Y"]  # Black
per-file-ignores = [
    "__init__.py:F401",
]

[tool.isort]
extend_skip = "third-party"
profile = "black"

[tool.mypy]
disable_error_code = "type-abstract,typeddict-unknown-key"
disallow_untyped_calls = false
disallow_untyped_decorators = false
files = "setup.py,src,tests"
python_version = 3.8
show_error_codes = true
show_error_context = true
strict = true
warn_unused_configs = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "torch.distributed.*"
implicit_reexport = true

# TODO: fix!
[[tool.mypy.overrides]]
module = "fairseq2.data.parquet_tools.*,tests.integration.parquet.*,recipes.parquet.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.1"
testpaths = ["tests"]
filterwarnings = [
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
    "ignore:pkg_resources is deprecated:DeprecationWarning",
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
    "ignore:To copy construct from a tensor:UserWarning",
]
