[build-system]
requires = ["packaging~=24.2", "setuptools~=75.8", "wheel~=0.45"]
build-backend = "setuptools.build_meta"

[tool.black]
extend-exclude = "third-party"

[tool.flake8]
extend_exclude = ["third-party"]
extend_ignore = ["E", "Y"]  # Black
per-file-ignores = [
    "__init__.py:F401",
]

[tool.isort]
extend_skip = "third-party"
profile = "black"

[tool.mypy]
disable_error_code = "type-abstract,typeddict-unknown-key"
disallow_untyped_calls = false
disallow_untyped_decorators = false
files = "setup.py,src,tests,recipes"
python_version = "3.10"
show_error_codes = true
show_error_context = true
strict = true
enable_error_code = "possibly-undefined,redundant-expr,truthy-bool,truthy-iterable"
warn_unused_configs = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "torch.distributed.*,torch.optim.*"
implicit_reexport = true

[[tool.mypy.overrides]]
module = "fairseq2.data.parquet.*,tests.unit.data.parquet.*,tests.integration.parquet.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.1"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
    "ignore:pkg_resources is deprecated:DeprecationWarning",
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
    "ignore:To copy construct from a tensor:UserWarning",
]
